# ws281x_lightberries

./: .gitignore  LightBerries.LightFunctions.html  LightBerries.LightPatterns.html  LightBerries.LightStrings.html  LightBerries.Pixels.html  LightBerries.html  LightFunctions.py  LightPatterns.py  Pixels.py  README.md  README.txt  WS281XLights.py  audio copy.py  audio.py  example.py  main.py  pyproject.toml  runLights.py  setup.cfg  setup.py  test.py  tox.ini  ws281x_lightberries.code-workspace
.github/workflows/: python-package.yml
Examples/: Audio.py  Basic.py  BasicMatrix.py  Example.py  FunctionGUI.py  PixelGUI.py  Simulate.py  audio.py  basic_matrix.py  example.py  gui.py  gui_pixels.py
LightBerries/: LICENSE  LightArrayControls.py  LightArrayFunctions.py  LightArrayPatterns.py  LightBerryException.py  LightBerryExceptions.py  LightControl.py  LightControls.py  LightDatas.py  LightFunctions.py  LightMatrixControls.py  LightMatrixFunctions.py  LightMatrixLetters.py  LightMatrixPatterns.py  LightPatterns.py  LightPixels.py  LightStrings.py  Pixels.py  README.md  RpiWS281xPatch.py  WS281XLights.py  __init__.py  __main__.py  rpi_ws281x_patch.py  setup.py
LightBerries/Examples/: audio.py  example.py  gui.py  slider.py
LightBerries/LightBerries/: LightDatas.py  LightFunctions.py  LightPatterns.py  LightStrings.py  Pixels.py  __init__.py  __main__.py
examples/: _game_objects.py  audio.py  basic_array.py  basic_matrix.py  basic_multi_matrix.py  demo_array.py  demo_matrix.py  demo_multi_matrix.py  dot_array.py  dot_matrix.py  game.py  game2.py  game_objects.py  game_twoplayer.py  gui_functions.py  gui_pixels.py  image.py  multi_matrix.py  xbox.py  xbox_controller.py  xbox_dot_multi_matrix.py
games/: _game_objects.py  dots.py  eat.py  game_objects.py  jump.py  light_game.py  picker.py  space.py  space_twoplayer.py  xbox_controller.py
src/LightBerries/: LightArrayControls.py  LightArrayFunctions.py  LightArrayPatterns.py  LightPixels.py  LightStrings.py  RpiWS281xPatch.py  __init__.py  __main__.py  array_controller.py  array_function.py  array_patterns.py  pixel.py  rpi_ws281x_patch.py  ws281x_strings.py
src/lightberries/: __init__.py  __main__.py  array_controller.py  array_function.py  array_functions.py  array_patterns.py  exceptions.py  matrix_controller.py  matrix_function.py  matrix_functions.py  matrix_letters.py  matrix_patterns.py  pixel.py  rpi_ws281x_patch.py  rpiws281x.py  rpiws281x_patch.py  ws281x_strings.py
tests/: test_array_controller.py  test_array_patterns.py  test_functions.py  test_patterns.py  test_pixels.py  test_strings.py
