[tool.poetry]
name = "LightBerries"
version = "1.0.2"
description = "A wrapper for rpi_ws281x that does all the heavy lifting for you."
authors = ["joeferg425"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
rpi-ws281x = {version = "^4.3.3", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
matplotlib = "^3.5.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
