[tool.poetry]
name = "lightberries"
version = "1.0.2"
description = "A wrapper for rpi_ws281x that does all the heavy lifting for you."
authors = ["joeferg425"]
license = "MIT"
packages = [
    { include = "lightberries", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22"
rpi-ws281x = {version = "^4.3", optional = true}
pygame = {version = "^2.1.2", extras = ["examples"]}

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^4.0"
matplotlib = "^3.5"
pytest = "^7.1"
mock = "^4.0.3"

[tool.poetry.extras]
examples = ["pyaudio"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests/test_*.py"]
