[metadata]
name = LightBerries
version = 0.55dev
url=https://github.com/joeferg425/ws281x_lightberries
author=JoeFerg425
description = A wrapper for rpi_ws281x that does all the heavy lifting for you
long_description = file: README.md
keywords = raspberry, pi, rpi, rpi_ws281x, ws2811, ws2812, adafruit, neopixel
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3

[options]
include_package_data=True
packages=find:
install_requires=
    Adafruit-Blinka >= 3.0.0
    adafruit-circuitpython-neopixel == 3.4.0
    numpy >= 1.15.1
    nptyping >= 1.4.4
    rpi_ws281x == 4.2.2
    RPi.GPIO >= 0.7.0
python_requires >= 3.9

[options.packages.find]
where=src

[options.package_data]
*=*.md